# soundjam

./: com.github.hezral.soundjam.yml  meson.build
data/: application.css  com.github.hezral.soundjam.appdata.xml.in  com.github.hezral.soundjam.desktop.in  com.github.hezral.soundjam.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: __init__.py  custom_widgets.py  main.py  meson.build  playsoundy.py  seeking.py  soundjam.in  utils.py  window.py
